--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "expo": "~53.0.11",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.3"
+    "react-native": "0.79.3",
+    "typescript": "~5.8.3",
+    "@types/react": "~19.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
