fix: correct placement of scheme property in app.json

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "BibliotecaNative",
     "slug": "BibliotecaNative",
+    "scheme": "Biblioteca",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -28,6 +29,5 @@
     "plugins": [
       "expo-router"
     ]
-  },
-  "scheme": "Biblioteca"
+  }
 }
