chore: update dependencies and add path mappings in tsconfig
- Added dotenv and firebase to dependencies
- Updated expo, expo-constants, expo-linking, and expo-router versions
- Added @react-native-async-storage/async-storage to dependencies
- Added path mappings for @firegase/auth and general paths in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
   "compilerOptions": {
     "strict": true,
     "module": "ESNext",
+    "paths": {
+      "@firegase/auth": ["./node_modules/@firegase/auth/dist/index.d.ts"],
+      "@/*" : ["./*"]
+    },
     "forceConsistentCasingInFileNames": true
   },
   "extends": "expo/tsconfig.base"
