--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "~19.0.10",
+    "dotenv": "^16.5.0",
     "expo": "~53.0.11",
+    "expo-constants": "~17.1.6",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
+    "firebase": "9.23.0",
     "react": "19.0.0",
     "react-native": "0.79.3",
-    "typescript": "~5.8.3",
-    "@types/react": "~19.0.10",
-    "expo-router": "~5.1.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "expo-linking": "~7.1.5",
-    "expo-constants": "~17.1.6"
+    "typescript": "~5.8.3",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
