--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "^0.79.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.2.0",
     "typescript": "~5.8.3"
   },
   "devDependencies": {
