--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@types/react": "~19.0.10",
     "dotenv": "^16.5.0",
-    "expo": "^53.0.13",
+    "expo": "^53.0.15",
     "expo-constants": "~17.1.6",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.1",
+    "expo-linking": "^7.1.6",
+    "expo-router": "~5.1.2",
     "expo-status-bar": "~2.2.3",
     "firebase": "9.23.0",
     "react": "19.0.0",
