--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@types/react": "~19.0.10",
+    "axios": "^1.10.0",
     "dotenv": "^16.5.0",
     "expo": "^53.0.13",
     "expo-constants": "~17.1.6",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.1",
     "expo-status-bar": "~2.2.3",
     "firebase": "9.23.0",
     "react": "19.0.0",
+    "react-hook-form": "^7.59.0",
     "react-native": "^0.79.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
