--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "bibliotecanative",
-  "version": "1.0.0",
-  "main": "expo-router/entry",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@types/react": "~19.0.10",
-    "dotenv": "^16.5.0",
-    "expo": "^53.0.13",
-    "expo-constants": "~17.1.6",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.1",
-    "expo-status-bar": "~2.2.3",
-    "firebase": "9.23.0",
-    "react": "19.0.0",
-    "react-native": "^0.79.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-vector-icons": "^10.2.0",
-    "typescript": "~5.8.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "name": "bibliotecanative",
+    "version": "1.0.0",
+    "main": "expo-router/entry",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web"
+    },
+    "dependencies": {
+        "@react-native-async-storage/async-storage": "2.1.2",
+        "@types/react": "~19.0.10",
+        "dotenv": "^16.5.0",
+        "expo": "^53.0.13",
+        "expo-constants": "~17.1.6",
+        "expo-linking": "~7.1.5",
+        "expo-router": "~5.1.1",
+        "expo-status-bar": "~2.2.3",
+        "firebase": "9.23.0",
+        "lottie-react-native": "^7.2.3",
+        "react": "19.0.0",
+        "react-native": "^0.79.4",
+        "react-native-safe-area-context": "5.4.0",
+        "react-native-screens": "~4.11.1",
+        "react-native-vector-icons": "^10.2.0",
+        "typescript": "~5.8.3"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0"
+    },
+    "private": true
 }
