--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "web": "expo start --web"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.1.1",
         "@react-native-async-storage/async-storage": "2.1.2",
         "@types/react": "~19.0.10",
         "dotenv": "^16.5.0",
