--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "axios": "^1.10.0",
     "dotenv": "^16.5.0",
     "expo": "^53.0.13",
+    "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.6",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.1",
     "expo-status-bar": "~2.2.3",
     "firebase": "9.23.0",
+    "lottie-react-native": "^7.2.3",
     "react": "19.0.0",
     "react-hook-form": "^7.59.0",
     "react-native": "^0.79.4",
@@ -28,7 +30,6 @@
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.2.0",
     "typescript": "~5.8.3",
-    "expo-checkbox": "~4.1.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
