--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.2.0",
     "typescript": "~5.8.3",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "expo-image": "~2.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
