--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "@types/react": "~19.0.10",
     "axios": "^1.10.0",
     "dotenv": "^16.5.0",
-    "expo": "^53.0.17",
+    "expo": "^53.0.20",
     "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.6",
     "expo-file-system": "~18.1.11",
-    "expo-image": "~2.3.2",
+    "expo-image": "^2.4.0",
+    "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.3",
+    "expo-router": "^5.1.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "9.23.0",
-    "lottie-react-native": "^7.2.3",
+    "lottie-react-native": "^7.2.2",
     "nanoid": "^5.1.5",
     "react": "19.0.0",
     "react-hook-form": "^7.59.0",
@@ -34,8 +35,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.2.0",
     "typescript": "~5.8.3",
-    "yup": "^1.6.1",
-    "expo-image-manipulator": "~13.1.7"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
