--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-picker/picker": "^2.11.1",
     "@types/react": "~19.0.10",
     "axios": "^1.10.0",
     "dotenv": "^16.5.0",
@@ -26,20 +25,32 @@
     "expo-router": "^5.1.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "9.23.0",
-    "lottie-react-native": "^7.2.2",
+    "lottie-react-native": "7.2.2",
     "nanoid": "^5.1.5",
     "react": "19.0.0",
     "react-hook-form": "^7.59.0",
     "react-native": "^0.79.4",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-vector-icons": "^10.2.0",
+    "react-native-safe-area-context": "5.4.0",
     "typescript": "~5.8.3",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "react-native-edge-to-edge": "1.6.0",
+    "expo-system-ui": "~5.0.10",
+    "expo-dev-client": "~5.2.4",
+    "react-native-screens": "~4.11.1",
+    "expo-notifications": "~0.31.4",
+    "expo-device": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
