🐛 fix: Configuraciones de eas para dev mode

--- a/eas.json
+++ b/eas.json
@@ -5,8 +5,12 @@
   },
   "build": {
     "development": {
+      "environment": "production",
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      }
     },
     "preview": {
       "environment": "production",
