--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "expo-dev-client": "~5.2.4",
     "react-native-screens": "~4.11.1",
     "expo-notifications": "~0.31.4",
-    "expo-device": "~7.1.4"
+    "expo-device": "~7.1.4",
+    "expo-clipboard": "~7.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
