--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
     "dotenv": "^16.5.0",
     "expo": "^53.0.20",
     "expo-checkbox": "~4.1.4",
+    "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
     "expo-file-system": "~18.1.11",
     "expo-image": "^2.4.0",
     "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
+    "expo-location": "^18.1.6",
+    "expo-notifications": "~0.31.4",
     "expo-router": "^5.1.4",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.10",
     "firebase": "9.23.0",
     "lottie-react-native": "7.2.2",
     "nanoid": "^5.1.5",
@@ -31,16 +37,12 @@
     "react-hook-form": "^7.59.0",
     "react-native": "^0.79.4",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-safe-area-context": "5.4.0",
-    "typescript": "~5.8.3",
-    "yup": "^1.6.1",
     "react-native-edge-to-edge": "1.6.0",
-    "expo-system-ui": "~5.0.10",
-    "expo-dev-client": "~5.2.4",
+    "react-native-maps": "^1.24.13",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "expo-notifications": "~0.31.4",
-    "expo-device": "~7.1.4",
-    "expo-clipboard": "~7.1.5"
+    "typescript": "~5.8.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
